pocoincludedir = ${includedir}

pocoinclude_HEADERS = \
        commonStructLib.h       \
        csLib.h                 \
        errnoLib.h              \
        gcomLib.h               \
        h2devLib.h              \
        h2endianness.h          \
        h2errorLib.h            \
        h2evnLib.h              \
        h2initGlob.h            \
        h2logLib.h              \
        h2mathLib.h             \
        h2rngLib.h              \
        h2semLib.h              \
        h2timeLib.h             \
        h2timerLib.h            \
        logLib.h                \
        mboxLib.h               \
        memLib.h                \
        portLib.h               \
        posterLib.h             \
        semLib.h                \
        shellLib.h              \
        smMemLib.h              \
        smObjLib.h              \
        symLib.h                \
        sysLib.h                \
        taskHookLib.h           \
        taskLib.h               \
        tickLib.h               \
        wdLib.h
